<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BroadcastsFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:text="@string/broadcasts_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bSender"
        android:text="@string/b_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle" />

    <TextView
        android:id="@+id/connectionText"
        android:text="@string/broadcasts_hint"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>