<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntentsFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:text="@string/intents_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/iExtras"
            android:text="@string/i_extras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/iMaps"
            android:text="@string/i_maps"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>